--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,4 +6,10 @@
 
 body {
   font: Arial, Helvetica, sans-serif;
+  background-color: #000011;
+  color: #fff;
+
+  h1 {
+    font-size: 3em;
+  }
 }
