--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,11 +5,6 @@
 }
 
 body {
-  font: Arial, Helvetica, sans-serif;
-  background-color: #000011;
-  color: #fff;
-
-  h1 {
-    font-size: 3em;
-  }
+  font: 16px "Helvetica Neue", Arial, sans-serif;
+  color: #121214;
 }
